3 ano/Compilers/yacc/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Biblio
Rule 1     Biblio -> Livros
Rule 2     Livros -> Livro
Rule 3     Livros -> Livros Livro
Rule 4     Livro -> Titulo Autor Ano ISBN .
Rule 5     Titulo -> TEXTO
Rule 6     Autor -> TEXTO
Rule 7     Ano -> INT

Terminals, with rules where they appear

.                    : 4
INT                  : 7
ISBN                 : 4
TEXTO                : 5 6
error                : 

Nonterminals, with rules where they appear

Ano                  : 4
Autor                : 4
Biblio               : 0
Livro                : 2 3
Livros               : 1 3
Titulo               : 4

Parsing method: LALR

state 0

    (0) S' -> . Biblio
    (1) Biblio -> . Livros
    (2) Livros -> . Livro
    (3) Livros -> . Livros Livro
    (4) Livro -> . Titulo Autor Ano ISBN .
    (5) Titulo -> . TEXTO

    TEXTO           shift and go to state 5

    Biblio                         shift and go to state 1
    Livros                         shift and go to state 2
    Livro                          shift and go to state 3
    Titulo                         shift and go to state 4

state 1

    (0) S' -> Biblio .



state 2

    (1) Biblio -> Livros .
    (3) Livros -> Livros . Livro
    (4) Livro -> . Titulo Autor Ano ISBN .
    (5) Titulo -> . TEXTO

    $end            reduce using rule 1 (Biblio -> Livros .)
    TEXTO           shift and go to state 5

    Livro                          shift and go to state 6
    Titulo                         shift and go to state 4

state 3

    (2) Livros -> Livro .

    TEXTO           reduce using rule 2 (Livros -> Livro .)
    $end            reduce using rule 2 (Livros -> Livro .)


state 4

    (4) Livro -> Titulo . Autor Ano ISBN .
    (6) Autor -> . TEXTO

    TEXTO           shift and go to state 8

    Autor                          shift and go to state 7

state 5

    (5) Titulo -> TEXTO .

    TEXTO           reduce using rule 5 (Titulo -> TEXTO .)


state 6

    (3) Livros -> Livros Livro .

    TEXTO           reduce using rule 3 (Livros -> Livros Livro .)
    $end            reduce using rule 3 (Livros -> Livros Livro .)


state 7

    (4) Livro -> Titulo Autor . Ano ISBN .
    (7) Ano -> . INT

    INT             shift and go to state 10

    Ano                            shift and go to state 9

state 8

    (6) Autor -> TEXTO .

    INT             reduce using rule 6 (Autor -> TEXTO .)


state 9

    (4) Livro -> Titulo Autor Ano . ISBN .

    ISBN            shift and go to state 11


state 10

    (7) Ano -> INT .

    ISBN            reduce using rule 7 (Ano -> INT .)


state 11

    (4) Livro -> Titulo Autor Ano ISBN . .

    .               shift and go to state 12


state 12

    (4) Livro -> Titulo Autor Ano ISBN . .

    TEXTO           reduce using rule 4 (Livro -> Titulo Autor Ano ISBN . .)
    $end            reduce using rule 4 (Livro -> Titulo Autor Ano ISBN . .)

